gtpb_clientside/styles/report.css
table#reportData { 
  width:100%; 
  height:100%;
  border-collapse:collapse;
  border:0;
}												

#wrapper table#reportData td {
  padding: 2px 6px;
}

#wrapper table#reportData th {
  padding-left: 3px;
  padding-right: 3px;
  padding-top: 6px;
  /* font-family: "Arial Narrow", Arial, sans-serif; */
}

table#reportData th {
  background-color: rgb(240,240,240); /* #f1f2ed; */
  font-size:10pt; 
  color:black;
  font-weight:bold;
  border:1px solid #cecece;
  padding:7px;
  text-align:left;
  height:30px; 
  text-transform: capitalize;
  cursor:default; 
  background-repeat:no-repeat;
  background-position:right center;
}

.tab-item table#reportData th {
  font-size: 11pt!important; /* override modalFramework.css */
  border-bottom: 1px solid #888888!important;
  border-top: none!important;
  border-left: none!important;
  border-right: none!important;
}

table#reportData th[onclick]:hover {
  border-bottom-color:#FFD588!important;
  background-color:#F8F8F6!important;
}

table#reportData th#sortedColumn{
  background-color: #E4EAF2;
  /* padding-right:25px; */
}

table#reportData th#sortedColumn[sortDirn=true] {
  background-image:url('reports/asc.png');
  border-bottom-color:green;
}

table#reportData th#sortedColumn[sortDirn=false] {
  background-image:url('reports/desc.png');
  border-bottom-color:red;
}

table#reportData th div {
  width:100%;
  overflow:hidden;
  white-space:nowrap;
}

table#reportData th.waiting {
  background-image:url('reports/spinner.gif')!important;
}
	
table#reportData thead tr#fieldFilters,
table#reportData thead tr.wikiTitle { 
  background-color:#e2e1d9;
}

div#wrapper table#reportData #fieldFilters td {
  padding: 2px 3px;
  border-right: 1px solid #e2e1d9;
}

table#reportData thead tr#fieldFilters input { 
  width:100%;
}
					  
table#reportData thead td { 
  border-bottom:1px solid #cecece;
}					  

table#reportData .selectable tr.rowa:hover td,
table#reportData .selectable tr.rowb:hover td { 
  background-color:#dae2ff;
}

table#reportData tbody tr.rowa:hover td.colored,
table#reportData tbody tr.rowb:hover td.colored { 
  background-image: url('../styles/highlighted_row_fine_angled.png'); 
}   
					  
table#reportData td { 
  vertical-align:top;
  border-right:1px solid #f2f2f2;
  padding:3px 7px 3px 7px;
  font-size:10pt;
  cursor:default;
  height:20px;
  min-width:2em;
  color:black!important
}

/* narrow spacer cols */
table#reportData td:first-child {
  min-width: 0;
}

table#reportData td:last-child {
  min-width: 0;
}

table#reportData tr#currentRow td { 
  background-color:#ffd588;
  /*background-image: url(styles/selected_row_fine_angled.png);*/
  /*font-family:"Arial Bold";*/
}				

table#reportData tr#currentRow td.leading,
table#reportData tr#currentRow td.trailing {
  background-color:#FFBA3B;
}	  

table#reportData tr#currentRow td.colored {
  background-image: url('../styles/selected_row_fine_angled.png');
}
					 
table#reportData tr.rowb td, 
table#reportData tr.rowa td { 
  height:25px 
}

.in_cell {
  max-height: 43px;
  overflow: hidden;
}

.in_cell:hover {
	overflow:visible;
  text-shadow: 0px 0px 1em white,0px 0px 1em white,0px 0px 1em white,0px 0px 1em white,0px 0px 1em white,0px 0px 1em white,0px 0px 1em white,0px 0px 1em white,0px 0px 1em white,0px 0px 1em white,0px 0px 1em white,0px 0px 1em white,0px 0px 1em white,0px 0px 1em white,0px 0px 1em white,0px 0px 1em white,0px 0px 1em white,0px 0px 1em white,0px 0px 1em white,0px 0px 1em white;
  position: relative;
  font-weight: bold;
  z-index: 999;
}

table#reportData tr.rowb  { 
  background-image: url('../styles/rowb.png');
}

#wrapper table#reportData tr.rowb  { 
  background-image: none;
  border: 1px solid #f2f2f2;
}

table#reportData .trailing { 
  border-right:0 
}
table#reportData tr.trailing td { 
  height:auto 
}

table#reportData tr#currentRow.excludedRecord td {
  background-color: #cccccc;
  color: white!important;
}

table#reportData tr.excludedRecord td {
  background-color: #cccccc;
  color: white!important;
}

.error { color: red; }

.greytext {
	color: gray;
	text-transform: none;
}

.small { font-size: 8pt!important }

.load-spinner {
	background: white url('../styles/ajax-loader.gif') no-repeat 50% 50%;
	position: absolute;
	width: 100%;
	height: 100%;
	opacity: 0.8;
	filter: alpha(opacity = 80);
	top: 0;
	left: 0;
}

.colour-block {
	width: 36px;
	height: 36px;
	float: left;
}

.capitalised { text-transform: capitalize; }

table#reportData td.capitalised { width: 30%; }

td.calculations {
  font-weight: bold;
  border: 1px solid #F2F2F2;
}

.separator {
  background:transparent url(line.gif) repeat-x scroll 0pt 28px;
  color:#888888;
  /* font-style:italic; */
  font-weight:bold;
  margin-bottom:-3px;
  position:relative;
}

.separator td.leading:before {
  content: "\2013"; /* a dash - entity &endash; */
  color: gray;
  position: relative;
  top: 1px;
  border: 1px solid #d0d0d0;
  cursor: pointer;
}

.separator.contracted td.leading:before {
  content: "+";
}	

.separator td {
  padding-top:20px!important;
  border-right:0px!important;
}

.separator span {
  background:#FFFFFF none repeat scroll 0% 0%;
  padding: 0px 5px;
}

.separator .fieldname {
  margin-left:-25px;
  font-size: 10pt;
  cursor: pointer;
}

/* Hide adjacent separators, i.e. ones with no content */
tr.separator + tr.separator {
  display: none;
}

.seemorerows {
	background: #f4f4f4;
	width: 100%;
	padding-left: 14px;
}

.warningmessage {
		-webkit-border-radius: 1em;
		-moz-border-radius: 1em;
		border: 2px solid rgb(254,233,84);
		text-align: center;
		background: rgb(254,242,149);
		margin: 10px;
		padding: 10px;
}

#filterhelp {
	color: gray;
	text-shadow: 0 1px 0 white;
}

.ab_tooltip {
	position: absolute;
	z-index: 99;
	display: none;
	top: 30px;
	left: 0;
	background-color: #fffcdc;
	-moz-box-shadow: 3px 3px 8px #888;
	-webkit-box-shadow: 3px 3px 8px #888;
	box-shadow: 3px 3px 4px #888;
	width: auto!important;
	max-width: 400px;
	font-weight: normal;
	font-size: 9pt;
	padding: 0.2em;
	text-transform: none;
	-moz-border-radius: 5px;
	-webkit-border-radius: 5px;
	border-radius: 5px;
}

.ab_tooltip .tooltip_content {
	font-size: 8pt;
}

img.mini_icon {
	vertical-align: middle;
}

